--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,8 @@
     "postcss-simple-vars": "^7.0.1",
     "sass": "^1.63.4",
     "typescript": "^5.0.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-bundle-visualizer": "^1.0.1",
+    "vite-plugin-copy": "^0.1.6"
   }
 }
