--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -150,7 +150,7 @@ jobs:
     github:
       branch: main
       deploy_on_push: true
-      repo: hi-events/hi.events
+      repo: HiEventsDev/hi.events
     instance_count: 2
     instance_size_slug: professional-xs
     kind: PRE_DEPLOY
@@ -173,7 +173,7 @@ services:
     github:
       branch: main
       deploy_on_push: true
-      repo: hi-events/hi.events
+      repo: HiEventsDev/hi.events
     http_port: 80
     instance_count: 1
     instance_size_slug: professional-xs
@@ -193,7 +193,7 @@ static_sites:
     github:
       branch: main
       deploy_on_push: true
-      repo: hi-events/hi.events
+      repo: HiEventsDev/hi.events
     name: hi-events-frontend
     source_dir: frontend
 workers:
@@ -201,7 +201,7 @@ workers:
     github:
       branch: main
       deploy_on_push: true
-      repo: hi-events/hi.events
+      repo: HiEventsDev/hi.events
     instance_count: 1
     instance_size_slug: professional-xs
     name: hi-events-worker
