--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "HiEventsDev/hi.events",
+    "name": "hieventsdev/hi.events",
     "type": "project",
     "description": "hi.events - Ticket selling and event management.",
     "keywords": ["ticketing", "events"],
