--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -3,7 +3,7 @@ services:
     backend:
         build:
             context: ./../backend
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.dev
         container_name: backend
         ports:
             - "1234:80"
