--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -11,11 +11,10 @@ ENV PHP_DISMOD=ioncube,pdo_sqlsrv,sqlsrv,pdo_mysql,mysqli,mysqlnd,pdo_sqlite,mys
 COPY ./docker/supervisord/syslog.conf /opt/docker/etc/supervisor.d/syslog.conf
 
 RUN chown -R application:application /app \
+    && mkdir -p /app/storage \
     && chmod -R 755 /app/storage  \
     && mkdir -p /app/bootstrap/cache \
     && chmod -R 775 /app/bootstrap/cache
-
-RUN chmod -R 777 /app/vendor/ezyang/htmlpurifier/library/HTMLPurifier/DefinitionCache/Serializer
 
 EXPOSE 80 443
 
