--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5678 --host 0.0.0.0",
-    "build": "vite build",
+    "dev": "cross-env NODE_ENV=development node server.js",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
+    "build:server": "vite build --ssr src/entry.server.tsx --outDir dist/server",
     "build-strict": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "messages:extract": "lingui extract",
-    "messages:compile": "lingui compile"
+    "messages:compile": "lingui compile",
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
@@ -30,6 +33,7 @@
     "@mantine/nprogress": "^7.5.2",
     "@mantine/tiptap": "^7.5.2",
     "@react-pdf/renderer": "^3.3.4",
+    "@remix-run/node": "^2.8.1",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
     "@tabler/icons-react": "^2.44.0",
@@ -43,22 +47,26 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "collect.js": "^4.36.1",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.8",
+    "express": "^4.19.2",
     "qr-scanner": "^1.4.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-qr-code": "^2.0.12",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "recharts": "2"
   },
   "devDependencies": {
     "@lingui/cli": "^4.7.0",
     "@lingui/vite-plugin": "^4.7.0",
+    "@rollup/plugin-replace": "^5.0.5",
     "@swc/core": "1.3.105",
-    "@types/node": "^20.3.1",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -75,7 +83,7 @@
     "postcss-simple-vars": "^7.0.1",
     "sass": "^1.63.4",
     "typescript": "^5.0.2",
-    "vite": "^5.0.0",
+    "vite": "^4.5.3",
     "vite-bundle-visualizer": "^1.0.1",
     "vite-plugin-copy": "^0.1.6"
   }
