--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node server.js",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --ssrManifest --outDir dist/client",
-    "build:server": "vite build --ssr src/entry.server.tsx --outDir dist/server",
-    "build-strict": "tsc && npm run build",
+    "dev:csr": "vite --port 5678 --host 0.0.0.0",
+    "build:csr": "vite build",    
+    "build-strict:csr": "tsc && npm run build:csr",
+    "preview:csr": "vite preview",
+    
+
+    "dev:ssr": "cross-env NODE_ENV=development node server.js --port 5678",
+    "build:ssr": "npm run build:ssr:client && npm run build:ssr:server",
+    "build:ssr:client": "vite build --ssrManifest --outDir dist/client",
+    "build:ssr:server": "vite build --ssr src/entry.server.tsx --outDir dist/server",
+    "start:ssr": "cross-env NODE_ENV=production node server.js --port 5678",
+
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "messages:extract": "lingui extract",
-    "messages:compile": "lingui compile",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "messages:compile": "lingui compile"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
@@ -21,17 +26,17 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@lingui/macro": "^4.7.0",
     "@lingui/react": "^4.7.0",
-    "@mantine/carousel": "^7.5.2",
-    "@mantine/charts": "^7.5.2",
-    "@mantine/core": "^7.5.2",
-    "@mantine/dates": "^7.5.2",
-    "@mantine/dropzone": "^7.5.2",
-    "@mantine/form": "^7.5.2",
-    "@mantine/hooks": "^7.5.2",
-    "@mantine/modals": "^7.5.2",
-    "@mantine/notifications": "^7.5.2",
-    "@mantine/nprogress": "^7.5.2",
-    "@mantine/tiptap": "^7.5.2",
+    "@mantine/carousel": "^7.7.1",
+    "@mantine/charts": "^7.7.1",
+    "@mantine/core": "^7.7.1",
+    "@mantine/dates": "^7.7.1",
+    "@mantine/dropzone": "^7.7.1",
+    "@mantine/form": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
+    "@mantine/modals": "^7.7.1",
+    "@mantine/notifications": "^7.7.1",
+    "@mantine/nprogress": "^7.7.1",
+    "@mantine/tiptap": "^7.7.1",
     "@react-pdf/renderer": "^3.3.4",
     "@remix-run/node": "^2.8.1",
     "@stripe/react-stripe-js": "^2.1.1",
@@ -64,7 +69,6 @@
   "devDependencies": {
     "@lingui/cli": "^4.7.0",
     "@lingui/vite-plugin": "^4.7.0",
-    "@rollup/plugin-replace": "^5.0.5",
     "@swc/core": "1.3.105",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.2",
