--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,7 @@
     "@lingui/vite-plugin": "^4.7.0",
     "@swc/core": "1.3.105",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
