--- a/docker/.env
+++ b/docker/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:z7qfYEwsFdTn6zMCYwgSwDoWZlk6SuKU54+woXYNHlk=
 APP_DEBUG=true
 
-API_URL=http://localhost:1234
+API_PORT=1234
 
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
