Add AGPL licence to compose.json

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "hi.events - Ticket selling and event management.",
     "keywords": ["ticketing", "events"],
-    "license": "Elastic License",
+    "license": "AGPL-3.0",
     "version": "0.0.1",
     "require": {
         "php": "^8.2",
