--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,2 +1,19 @@
+# See the README.md for informaiton on how to generate the JWT_SECRET and APP_KEY
 APP_KEY=
 JWT_SECRET=
+
+VITE_FRONTEND_URL=http://localhost:8123
+VITE_API_URL_CLIENT=http://localhost:8123/api
+VITE_API_URL_SERVER=http://localhost:80/api
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test
+
+LOG_CHANNEL=stderr
+QUEUE_CONNECTION=sync
+MAIL_MAILER=log
+
+FILESYSTEM_PUBLIC_DISK=public
+FILESYSTEM_PRIVATE_DISK=local
+
+APP_CDN_URL=http://localhost:8123/storage
+
+DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
