--- a/.github/workflows/pr-preview-deployment.yml
+++ b/.github/workflows/pr-preview-deployment.yml
@@ -2,7 +2,7 @@ name: PR Environment Management
 
 on:
   pull_request:
-    types: [labeled, unlabeled, closed]
+    types: [labeled, unlabeled, closed, opened, reopened, synchronize]
 
 env:
   DROPLET_SIZE: s-2vcpu-2gb
