--- a/.github/workflows/pr-preview-deployment.yml
+++ b/.github/workflows/pr-preview-deployment.yml
@@ -17,30 +17,19 @@ jobs:
       is-admin: ${{ steps.check.outputs.is-admin }}
     steps:
       - id: check
-        name: Check if PR author is admin
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const author = context.payload.pull_request.user.login;
-            
-            try {
-              const { data: collaborator } = await github.rest.repos.getCollaboratorPermissionLevel({
-                owner,
-                repo,
-                username: author
-              });
-              const isAdmin = collaborator.permission === 'admin';
-              core.setOutput('is-admin', isAdmin);
-            } catch (error) {
-              core.setOutput('is-admin', false);
-            }
+        name: Check if PR author is 'daveearley'
+        run: |
+          if [ "${{ github.event.pull_request.user.login }}" = "daveearley" ]; then
+            echo "is-admin=true" >> $GITHUB_ENV
+          else
+            echo "is-admin=false" >> $GITHUB_ENV
+          fi
 
   manage-environment:
     needs: check-permissions
     runs-on: ubuntu-latest
     if: |
-      needs.check-permissions.outputs.is-admin == 'true' && (
+      env.is-admin == 'true' && (
         (github.event.action == 'labeled' && github.event.label.name == 'deploy') ||
         (github.event.action == 'unlabeled' && github.event.label.name == 'deploy') ||
         github.event.action == 'closed'
@@ -116,7 +105,7 @@ jobs:
         run: rm -f private_key || true
 
       - name: Notify Non-Admin PR
-        if: needs.check-permissions.outputs.is-admin != 'true' && github.event.action == 'labeled' && github.event.label.name == 'deploy'
+        if: env.is-admin != 'true' && github.event.action == 'labeled' && github.event.label.name == 'deploy'
         uses: actions/github-script@v7
         with:
           script: |
@@ -125,7 +114,7 @@ jobs:
               owner,
               repo,
               issue_number,
-              body: '⚠️ Only repository administrators can deploy preview environments.'
+              body: '⚠️ Only Dave Earley can deploy preview environments.'
             });
             // Remove the deploy label
             await github.rest.issues.removeLabel({
