--- a/.github/workflows/pr-preview-deployment.yml
+++ b/.github/workflows/pr-preview-deployment.yml
@@ -24,12 +24,13 @@ jobs:
           else
             echo "is-admin=false" >> $GITHUB_ENV
           fi
+          echo "::set-output name=is-admin::$(cat $GITHUB_ENV | grep 'is-admin' | cut -d '=' -f 2)"
 
   manage-environment:
     needs: check-permissions
     runs-on: ubuntu-latest
     if: |
-      env.is-admin == 'true' && (
+      needs.check-permissions.outputs.is-admin == 'true' && (
         (github.event.action == 'labeled' && github.event.label.name == 'deploy') ||
         (github.event.action == 'unlabeled' && github.event.label.name == 'deploy') ||
         github.event.action == 'closed'
@@ -105,7 +106,7 @@ jobs:
         run: rm -f private_key || true
 
       - name: Notify Non-Admin PR
-        if: env.is-admin != 'true' && github.event.action == 'labeled' && github.event.label.name == 'deploy'
+        if: needs.check-permissions.outputs.is-admin != 'true' && github.event.action == 'labeled' && github.event.label.name == 'deploy'
         uses: actions/github-script@v7
         with:
           script: |
