Add APP_FRONTEND_URL to AIO Docker compose file

--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,12 +1,17 @@
-# See the README.md for informaiton on how to generate the JWT_SECRET and APP_KEY
+# See the README.md file for informaiton on how to generate the JWT_SECRET and APP_KEY
 APP_KEY=
 JWT_SECRET=
 
+# Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
 VITE_API_URL_CLIENT=http://localhost:8123/api
 VITE_API_URL_SERVER=http://localhost:80/api
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test
 
+# Backend variables
+# These values may not be suitable for production environments.
+# Please refer to the documentation for more information on how to configure these values
+# https://hi.events/docs/getting-started/deploying
 LOG_CHANNEL=stderr
 QUEUE_CONNECTION=sync
 MAIL_MAILER=log
@@ -15,5 +20,6 @@ FILESYSTEM_PUBLIC_DISK=public
 FILESYSTEM_PRIVATE_DISK=local
 
 APP_CDN_URL=http://localhost:8123/storage
+APP_FRONTEND_URL=http://localhost:8123
 
 DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
