--- a/docker/all-in-one/docker-compose.yml
+++ b/docker/all-in-one/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - QUEUE_CONNECTION=${QUEUE_CONNECTION}
       - MAIL_MAILER=${MAIL_MAILER}
       - APP_KEY=${APP_KEY}
+      - APP_FRONTEND_URL=${APP_FRONTEND_URL}
       - JWT_SECRET=${JWT_SECRET}
       - FILESYSTEM_PUBLIC_DISK=${FILESYSTEM_PUBLIC_DISK}
       - FILESYSTEM_PRIVATE_DISK=${FILESYSTEM_PRIVATE_DISK}
