Add support for offline payments and invoice generation

--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,6 +1,6 @@
 # See the README.md file for informaiton on how to generate the JWT_SECRET and APP_KEY
-APP_KEY=
-JWT_SECRET=
+APP_KEY=base64:V9tic8qIQsafEBgnO57ASMSpYf+WlO/tVJ7Vl6qaYQI=
+JWT_SECRET=base64:V9tic8qIQsafEBgnO57ASMSpYf+WlO/tVJ7Vl6qaYQI=
 
 # Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
