--- a/docker/all-in-one/docker-compose.yml
+++ b/docker/all-in-one/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: all-in-one
     ports:
       - "8123:80"
-    environment:
+    environment: 
       - VITE_FRONTEND_URL=${VITE_FRONTEND_URL}
       - VITE_API_URL_CLIENT=${VITE_API_URL_CLIENT}
       - VITE_API_URL_SERVER=${VITE_API_URL_SERVER}
@@ -21,7 +21,23 @@ services:
       - FILESYSTEM_PRIVATE_DISK=${FILESYSTEM_PRIVATE_DISK}
       - APP_CDN_URL=${APP_CDN_URL}
       - DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
-
+      - MAIL_MAILER=${MAIL_MAILER}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
+      - MAIL_FROM_NAME=${MAIL_FROM_NAME}
+      - STRIPE_PUBLIC_KEY=${STRIPE_PUBLIC_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - APP_SAAS_MODE_ENABLED=${APP_SAAS_MODE_ENABLED}
+      - APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=${APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT}
+      - APP_DISABLE_REGISTRATION=${APP_DISABLE_REGISTRATION}
+      - APP_NAME=${APP_NAME}
+      - APP_EMAIL_LOGO_URL=${APP_EMAIL_LOGO_URL}
+      - APP_EMAIL_LOGO_LINK_URL=${APP_EMAIL_LOGO_LINK_URL}
+      - APP_EMAIL_FOOTER_TEXT=${APP_EMAIL_FOOTER_TEXT}
     depends_on:
       postgres:
         condition: service_healthy
