Add offline payment support to the check in tool + Add invoicing support

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "ext-intl": "*",
+        "barryvdh/laravel-dompdf": "^3.0",
         "brick/money": "^0.8.0",
         "doctrine/dbal": "^3.6",
         "druc/laravel-langscanner": "^2.2",
@@ -21,6 +22,7 @@
         "nette/php-generator": "^4.0",
         "php-open-source-saver/jwt-auth": "^2.1",
         "spatie/icalendar-generator": "^2.8",
+        "spatie/laravel-data": "^4.11",
         "stripe/stripe-php": "^10.15"
     },
     "require-dev": {
