--- a/backend/vapor.yml
+++ b/backend/vapor.yml
@@ -2,6 +2,7 @@ id: 68983
 name: HiEvents
 environments:
   production:
+    domain: app.hi.events
     memory: 1024
     cli-memory: 512
     runtime: 'php-8.3:al2'
@@ -16,6 +17,4 @@ environments:
       - 'php artisan optimize'
     deploy:
       - 'php artisan migrate --force'
-    domains:
-      - app.hi.events
 
