--- a/backend/vapor.yml
+++ b/backend/vapor.yml
@@ -2,7 +2,7 @@ id: 68983
 name: HiEvents
 environments:
   production:
-    domain: app.hi.events
+    domain: api.hi.events
     memory: 1024
     cli-memory: 512
     runtime: 'php-8.3:al2'
