Add debug logging

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,7 +16,7 @@ STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-CORS_ALLOWED_ORIGINS=http://localhost:5173
+CORS_ALLOWED_ORIGINS=*
 
 LOG_CHANNEL=stderr
 LOG_DEPRECATIONS_CHANNEL=null
