--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "build:ssr:client": "vite build --ssrManifest --outDir dist/client",
     "build:ssr:server": "vite build --ssr src/entry.server.tsx --outDir dist/server",
     "start": "cross-env NODE_ENV=production node server.js",
-    "build": "npm run build:ssr:client && npm run build:ssr:server",
+    "build": "npm run messages:extract && npm run messages:compile && npm run build:ssr:client && npm run build:ssr:server",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "messages:extract": "lingui extract",
     "messages:compile": "lingui compile"
