--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,7 @@ APP_SAAS_MODE_ENABLED=false
 APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=1.5
 APP_HOMEPAGE_VIEWS_UPDATE_BATCH_SIZE=8
 APP_DISABLE_REGISTRATION=false
+APP_STRIPE_CONNECT_ACCOUNT_TYPE=express
 
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
